--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .DS_Store
 .ipynb_checkpoints
 .DS_*
-src/__pycache
-src/model_layers/__pycache
+src/__pycache__
+src/model_layers/__pycache__
 sample2
+test
